--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,24 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to 'A user is signed in!', '#', class: 'nav-link' %>
+      </li>
+    <% else %>
+      <li class="nav-item">
+        <%= link_to 'No user is signed in :(', '#', class: 'nav-link' %>
+      </li>
+    <% end %>
+  	
+  	<% if notice.present?%>
+  		<p class="alert alert-info"><%= notice %></p>
+  	<% end %>
+
+  	<% if alert.present?%>
+  		<p class="alert alert-danger"><%= alert %></p>
+  	<% end %>
+
     <%= yield %>
   </body>
 </html>
